--- a/fixtures/Gemfile
+++ b/fixtures/Gemfile
@@ -1,13 +1,7 @@
 source 'https://rubygems.org'
 
-gemspec
-
+gem 'rspec', '~> 3.5'
 # simplecov 0.12.0 has a bug in result merger and the bugfix is not yet released.
 # https://github.com/colszowka/simplecov/pull/513
 gem 'simplecov', github: 'colszowka/simplecov'
-
-group :development, :test do
-  gem 'rake', '~> 10.0'
-  gem 'rspec'
-  gem 'rubocop'
-end
+gem 'simplecov-parallel', path: '..'
