--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,12 @@
 machine:
   ruby:
     version: 2.3.1
+
+dependencies:
+  post:
+    - bundle install:
+        pwd: fixtures
+
 test:
   override:
     - bundle exec rake ci
