--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,10 @@ AllCops:
     - vendor/**/*
   TargetRubyVersion: 2.1
 
+Metrics/BlockLength:
+  Exclude:
+    - spec/**/*
+
 Metrics/LineLength:
   Max: 100
 
